# code

./: .gitignore  search_replace.sh
32bit_speedup/: Makefile  data.c  data.h  main.c
ansi-c/64bit/: main.c
ansi-c/alloca/: main.c
ansi-c/arg_parser/: Makefile  mytests.c  utils.c  utils.h
ansi-c/array_addr/: Makefile  main.c
ansi-c/array_init/: main.c
ansi-c/array_iter/: Makefile  main.c
ansi-c/array_of_array/: main.c
ansi-c/array_queue/: Makefile  main.c
ansi-c/ascii/: main.cpp
ansi-c/attribute_cleanup/: Makefile  main.c
ansi-c/backtrace/: Makefile  listing1.cpp  listing2.cpp
ansi-c/base64/: .gitignore  Makefile  main.cpp
ansi-c/binary_array_search/: Makefile  main.c
ansi-c/binary_include/: Makefile  main.c
ansi-c/binary_include_cmake/: CMakeLists.txt  main.c  maketable.c
ansi-c/bit_array/: main.c
ansi-c/bit_diff/: main.c
ansi-c/bit_macros/: main.c
ansi-c/bit_queue/: main.c
ansi-c/bittomask/: Makefile  main.c
ansi-c/c-testsuite/: Makefile  mysuite1.c  (+1 more)
ansi-c/lib-override/: CMakeLists.txt  lib1.cpp  lib1.h  main.cpp  override.cpp
ansi-c/lib-override-cpp/: CMakeLists.txt  main.cpp  override.cpp
aspect-parser/: .gitignore  AspectParser.cpp  AspectParser.h  CMakeLists.txt  Makefile  aspect  color.h  main.cpp  parser.cpp  readme.txt  test.txt
auto_completion/: Makefile  main.cpp
base64/: main.cpp
bash/: color_test.sh
bitfield/: main.c
c-testsuite/: mysuite2.c  testsuite.h
cmake/shared_lib/: CMakeLists.txt  main.c
collection_visitor/: main.cpp
cpp/tlv_stream/: CMakeLists.txt  main.cpp
cpp/tlv_stream/utils/: Logger.cpp  Logger.h  StringBuilder.cpp  StringBuilder.h  Utils.cpp  Utils.h  color.h
datetime/: main.c
dir-reader/: create.sh  main.cpp
elf_format/: .gitignore  Makefile  main.c
environment/: printenv.cpp
git-version/: .gitignore  Makefile  gen_version.sh  main.c
gprof/: Makefile
hex2val/: hex2val.cpp  test.c
json_parser/: Makefile  json_parser.c  json_parser.h  main.c  tests.c
lib-override-cpp/: normal.cpp  normal.h
libev/: Makefile  main1.cpp
libtar/: .gitignore  Makefile  libtar.c
linux/clang_address_sanitizer/: .gitignore  CMakeLists.txt  Makefile  main.c
linux/udp-client-server/: .gitignore  CMakeLists.txt  Makefile  Packet.h  PacketChecker.h  UdpClient.cpp  UdpClient.h  UdpServer.cpp
lua/: gc.lua  test.lua
macro-literal/: main.c
mini-os/: 1-simple.cpp  2-progress.cpp  3-complex.cpp  test.cpp
mmap/: Makefile  main.cpp  mmap.c
multiboot/: Makefile  color.h  main.c  multiboot2.h
multiple_base_cast/: main.cpp
nanosleep/: nanosleep.cpp
ncurses/: .gitignore  Makefile  border.c  dual_window.c  forms.c  hello.c  input.c  menu.c  panels.c  scroll_menu.c  scroll_window.c  window.c  worms.c  worms.h  worms_helper.c  worms_helper.h  worms_main.c
nim/: closure_iterator.nim  hello.nim  iterator.nim  logger.nim  macro1.nim  proc.nim
nmea_parser/: Makefile  gps_log.txt  main.c  nmea_parser.c  nmea_parser.h
nodejs/: 01_hello_world.js  02_server.js  03_url.js  04_url_split.js  05_filesystem.js  06_fileserver.js  07_events.js  08_upload1.js  09_email.js  demofile05.html  summer.html  winter.html
protobuf/: .gitignore  Makefile  add_person.cpp  list_people.cpp
pthread_cond/: main.cpp
python/: basic_for.py  basic_function.py  basic_if.py  data_deque.py  data_list.py  data_stack.py
regex/: Makefile  main.c
scripts/: cpu.sh  git-update.sh  graph.sh  nmdepend
snake_game/: Makefile  main.c
snappy/: FileMap.cpp  FileMap.h  Makefile  main.cpp
sudoku/: CMakeLists.txt  Makefile  SudokuBoard.cpp  SudokuBoard.h  main.cpp
svn-version/: code.cpp  code2.cpp
symbols/: Makefile  spaceship.cpp  spaceship.expmap  spaceship.h  testflight.cpp
tasks/: Cache.h  Makefile  TaskQueue.cpp  TaskQueue.h  myassert.h  runner.cpp
threads/: Makefile  color.h  threads.cpp
throwing_constructor/: constructor.cpp
time-sync/: rdate-server.c
udp-client-server/: UdpClient.cpp  UdpServer.cpp  UdpServer.h
unzip/: Makefile  main.c
websocket-server/: .gitignore  CMakeLists.txt  Makefile  WebSocketServer.cpp  WebSocketServer.h  base64.cpp  base64.h  main.cpp  sha-1.cpp  sha-1.h  ws-test.html
wren/: Makefile  example.wren  main.c
yaffutSkip/: main.cpp
zlib/: Makefile  main.c
(+633 files in other folders)
